--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.synesthesias.plateau-unity-sdk": "file:../Plugins/PLATEAU-SDK-for-Unity-v3.4.2.0.tgz",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.14.0",
